--- a/Desktop/projeto-restauranteDaguia/restaurante-daguia/.gitignore
+++ b/Desktop/projeto-restauranteDaguia/restaurante-daguia/.gitignore
@@ -1,3 +1,5 @@
+.env
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -33,3 +35,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
