--- a/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
+++ b/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/styles": "^4.11.5",
     "@react-google-maps/api": "^2.18.1",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -18,6 +22,7 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable-views": "^0.14.0",
     "tailwindcss": "3.3.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
