--- a/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
+++ b/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@react-google-maps/api": "^2.18.1",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.0.3",
