--- a/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
+++ b/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
@@ -26,6 +26,7 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2",
     "react-swipeable-views": "^0.14.0",
     "tailwindcss": "3.3.1"
   },
