--- a/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
+++ b/Desktop/projeto-restauranteDaguia/restaurante-daguia/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
     "react-swipeable-views": "^0.14.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
