--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.0",
+    "@mui/material": "^5.13.2",
     "@react-google-maps/api": "^2.18.1",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.0.3",
@@ -27,7 +24,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
-    "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.1"
   },
@@ -35,5 +31,6 @@
   "main": "next.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {}
 }
